<resources>
    <string name="app_name">FasterFood</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Faster Food</string>
    <string name="nav_header_subtitle">A place to share your own recipe\'s</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_create">Create Recipe</string>
    <string name="menu_view">View Recipes</string>
    <string name="menu_login">Login</string>
    <string name="menu_signup">Sign up</string>
    <string name="menu_update">Update Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="view_recipe">View Recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="description">Description</string>
    <string name="food_image_desc">Image of food</string>
    <string name="view_all_recipe">View All Recipes</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="menu_signout">Sign out</string>
    <string name="action_signout">Sign out</string>

    <!--
    <string name="shared_preferences_user">user</string>
    <string name="shared_preferences_first_name">firstname</string>
    <string name="shared_preferences_last_name">lastname</string>
    <string name="shared_preferences_email">email</string>
    <string name="shared_preferences_is_professional">is</string>
    -->
</resources>