<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:title="Recipes">

            <menu android:checkableBehavior="all">

                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_viewAllRecipes"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/view_all_recipe" />
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_create" />
                <item
                    android:id="@+id/nav_view_my_recipe_list"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="View All My Recipes" />
            </menu>
        </item>

        <item android:title="Authentication">

            <menu android:checkableBehavior="all">
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_login" />
                <item
                    android:id="@+id/nav_signup"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_signup" />
                <item
                    android:id="@+id/nav_updateprofile"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="Update Profile" />
            </menu>
        </item>
    </group>


</menu>